--- a/package.json
+++ b/package.json
@@ -2,17 +2,59 @@
     "name": "osu-tour-manager-wsc",
     "version": "0.0.1",
     "description": "Websocket client that handle osu! tournament component.",
-    "main": "dist/index.ts",
     "scripts": {
-        "start": "tsc && node dist/index.js"
+        "start": "react-scripts start",
+        "build": "react-scripts build",
+        "test": "react-scripts test",
+        "eject": "react-scripts eject"
     },
     "author": "IkaWaAyuMu",
     "license": "MIT",
     "devDependencies": {
+        "@typescript-eslint/eslint-plugin": "^5.9.1",
+        "@typescript-eslint/parser": "^5.9.1",
+        "eslint": "^8.7.0",
+        "eslint-plugin-react": "^7.28.0",
         "typescript": "^4.5.4"
     },
     "dependencies": {
-        "html5-websocket": "^2.0.4",
-        "reconnecting-websocket": "^4.4.0"
+        "@testing-library/jest-dom": "^5.14.1",
+        "@testing-library/react": "^12.0.0",
+        "@testing-library/user-event": "^13.2.1",
+        "@types/jest": "^27.4.0",
+        "@types/node": "^17.0.9",
+        "@types/react": "^17.0.38",
+        "@types/react-dom": "^17.0.11",
+        "@types/ws": "^8.2.2",
+        "react": "^17.0.2",
+        "react-dom": "^17.0.2",
+        "react-router-dom": "^6.2.1",
+        "react-scripts": "5.0.0",
+        "reconnecting-websocket": "^4.4.0",
+        "web-vitals": "^2.1.0"
+    },
+    "compilerOptions": {
+        "baseUrl": "src"
+    },
+    "include": [
+        "src"
+    ],
+    "eslintConfig": {
+        "extends": [
+            "react-app",
+            "react-app/jest"
+        ]
+    },
+    "browserslist": {
+        "production": [
+            ">0.2%",
+            "not dead",
+            "not op_mini all"
+        ],
+        "development": [
+            "last 1 chrome version",
+            "last 1 firefox version",
+            "last 1 safari version"
+        ]
     }
 }
