--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
         "build": "react-scripts build",
         "test": "react-scripts test",
         "eject": "react-scripts eject",
-	"deploy": "http-server ./build --proxy http://localhost:8051? -p 8051"
+        "deploy": "http-server ./build --proxy http://localhost:8051? -p 8051"
     },
     "author": "IkaWaAyuMu",
     "license": "MIT",
@@ -26,11 +26,13 @@
         "@types/node": "^17.0.9",
         "@types/react": "^17.0.38",
         "@types/react-dom": "^17.0.11",
+        "@types/react-textfit": "^1.1.0",
         "@types/ws": "^8.2.2",
         "react": "^17.0.2",
         "react-dom": "^17.0.2",
         "react-router-dom": "^6.2.1",
         "react-scripts": "5.0.0",
+        "react-textfit": "^1.1.1",
         "reconnecting-websocket": "^4.4.0",
         "web-vitals": "^2.1.0"
     },
