--- a/package.json
+++ b/package.json
@@ -12,10 +12,13 @@
     "author": "IkaWaAyuMu",
     "license": "MIT",
     "devDependencies": {
+        "@swc/cli": "^0.1.55",
+        "@swc/core": "^1.2.139",
         "@typescript-eslint/eslint-plugin": "^5.9.1",
         "@typescript-eslint/parser": "^5.9.1",
         "eslint": "^8.7.0",
         "eslint-plugin-react": "^7.28.0",
+        "swc-loader": "^0.1.15",
         "typescript": "^4.5.4"
     },
     "dependencies": {
